@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
 begin_comment
-comment|/* GIMP - The GNU Image Manipulation Program  * Copyright (C) 1995 Spencer Kimball and Peter Mattis  *  * gimppanedbox.c  * Copyright (C) 2001-2005 Michael Natterer<mitch@gimp.org>  * Copyright (C)      2009 Martin Nordholts<martinn@src.gnome.org>  *  * This program is free software: you can redistribute it and/or modify  * it under the terms of the GNU General Public License as published by  * the Free Software Foundation; either version 3 of the License, or  * (at your option) any later version.  *  * This program is distributed in the hope that it will be useful,  * but WITHOUT ANY WARRANTY; without even the implied warranty of  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the  * GNU General Public License for more details.  *  * You should have received a copy of the GNU General Public License  * along with this program.  If not, see<http://www.gnu.org/licenses/>.  */
+comment|/* GIMP - The GNU Image Manipulation Program  * Copyright (C) 1995 Spencer Kimball and Peter Mattis  *  * gimppanedbox.c  * Copyright (C) 2001-2005 Michael Natterer<mitch@gimp.org>  * Copyright (C) 2009-2011 Martin Nordholts<martinn@src.gnome.org>  *  * This program is free software: you can redistribute it and/or modify  * it under the terms of the GNU General Public License as published by  * the Free Software Foundation; either version 3 of the License, or  * (at your option) any later version.  *  * This program is distributed in the hope that it will be useful,  * but WITHOUT ANY WARRANTY; without even the implied warranty of  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the  * GNU General Public License for more details.  *  * You should have received a copy of the GNU General Public License  * along with this program.  If not, see<http://www.gnu.org/licenses/>.  */
 end_comment
 
 begin_include
@@ -13,6 +13,12 @@ begin_include
 include|#
 directive|include
 file|<gtk/gtk.h>
+end_include
+
+begin_include
+include|#
+directive|include
+file|"libgimpwidgets/gimpwidgets.h"
 end_include
 
 begin_include
@@ -93,6 +99,12 @@ directive|include
 file|"gimp-log.h"
 end_include
 
+begin_include
+include|#
+directive|include
+file|"gimp-intl.h"
+end_include
+
 begin_comment
 comment|/**  * Defines the size of the area that dockables can be dropped on in  * order to be inserted and get space on their own (rather than  * inserted among others and sharing space)  */
 end_comment
@@ -113,6 +125,22 @@ name|INSERT_INDEX_UNUSED
 value|G_MININT
 end_define
 
+begin_define
+DECL|macro|INSTRUCTIONS_TEXT_PADDING
+define|#
+directive|define
+name|INSTRUCTIONS_TEXT_PADDING
+value|4
+end_define
+
+begin_define
+DECL|macro|INSTRUCTIONS_TEXT
+define|#
+directive|define
+name|INSTRUCTIONS_TEXT
+value|_("You can drop dockable dialogs here")
+end_define
+
 begin_struct
 DECL|struct|_GimpPanedBoxPrivate
 struct|struct
@@ -123,6 +151,12 @@ DECL|member|widgets
 name|GList
 modifier|*
 name|widgets
+decl_stmt|;
+comment|/* Displays INSTRUCTIONS_TEXT when there are no dockables */
+DECL|member|instructions
+name|GtkWidget
+modifier|*
+name|instructions
 decl_stmt|;
 comment|/* Window used for drag-and-drop output */
 DECL|member|dnd_window
@@ -275,6 +309,18 @@ parameter_list|)
 function_decl|;
 end_function_decl
 
+begin_function_decl
+specifier|static
+name|gint
+name|gimp_paned_box_get_drop_area_size
+parameter_list|(
+name|GimpPanedBox
+modifier|*
+name|paned_box
+parameter_list|)
+function_decl|;
+end_function_decl
+
 begin_macro
 name|G_DEFINE_TYPE
 argument_list|(
@@ -409,6 +455,124 @@ argument_list|,
 name|GimpPanedBoxPrivate
 argument_list|)
 expr_stmt|;
+comment|/* Instructions label    *    * Size a small size request so it don't mess up dock window layouts    * during startup    */
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+operator|=
+name|gtk_label_new
+argument_list|(
+name|INSTRUCTIONS_TEXT
+argument_list|)
+expr_stmt|;
+name|gtk_misc_set_padding
+argument_list|(
+name|GTK_MISC
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|)
+argument_list|,
+name|INSTRUCTIONS_TEXT_PADDING
+argument_list|,
+name|INSTRUCTIONS_TEXT_PADDING
+argument_list|)
+expr_stmt|;
+name|gtk_label_set_line_wrap
+argument_list|(
+name|GTK_LABEL
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|)
+argument_list|,
+name|TRUE
+argument_list|)
+expr_stmt|;
+name|gtk_label_set_justify
+argument_list|(
+name|GTK_LABEL
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|)
+argument_list|,
+name|GTK_JUSTIFY_CENTER
+argument_list|)
+expr_stmt|;
+name|gtk_widget_set_size_request
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|,
+literal|100
+argument_list|,
+literal|100
+argument_list|)
+expr_stmt|;
+name|gimp_label_set_attributes
+argument_list|(
+name|GTK_LABEL
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|)
+argument_list|,
+name|PANGO_ATTR_STYLE
+argument_list|,
+name|PANGO_STYLE_ITALIC
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|gtk_box_pack_start
+argument_list|(
+name|GTK_BOX
+argument_list|(
+name|paned_box
+argument_list|)
+argument_list|,
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|,
+name|TRUE
+argument_list|,
+name|TRUE
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|gtk_widget_show
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|)
+expr_stmt|;
+comment|/* Setup DND */
 name|gtk_drag_dest_set
 argument_list|(
 name|GTK_WIDGET
@@ -676,6 +840,109 @@ name|drag_handler
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+end_function
+
+begin_function
+specifier|static
+name|gint
+DECL|function|gimp_paned_box_get_drop_area_size (GimpPanedBox * paned_box)
+name|gimp_paned_box_get_drop_area_size
+parameter_list|(
+name|GimpPanedBox
+modifier|*
+name|paned_box
+parameter_list|)
+block|{
+name|gboolean
+name|no_widgets
+init|=
+operator|(
+name|g_list_length
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|widgets
+argument_list|)
+operator|==
+literal|0
+operator|)
+decl_stmt|;
+name|gint
+name|drop_area_size
+init|=
+literal|0
+decl_stmt|;
+if|if
+condition|(
+name|no_widgets
+condition|)
+block|{
+name|GtkAllocation
+name|allocation
+decl_stmt|;
+name|GtkOrientation
+name|orientation
+decl_stmt|;
+name|gtk_widget_get_allocation
+argument_list|(
+name|GTK_WIDGET
+argument_list|(
+name|paned_box
+argument_list|)
+argument_list|,
+operator|&
+name|allocation
+argument_list|)
+expr_stmt|;
+name|orientation
+operator|=
+name|gtk_orientable_get_orientation
+argument_list|(
+name|GTK_ORIENTABLE
+argument_list|(
+name|paned_box
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|orientation
+operator|==
+name|GTK_ORIENTATION_HORIZONTAL
+condition|)
+name|drop_area_size
+operator|=
+name|allocation
+operator|.
+name|width
+expr_stmt|;
+elseif|else
+if|if
+condition|(
+name|orientation
+operator|==
+name|GTK_ORIENTATION_VERTICAL
+condition|)
+name|drop_area_size
+operator|=
+name|allocation
+operator|.
+name|height
+expr_stmt|;
+block|}
+else|else
+block|{
+name|drop_area_size
+operator|=
+name|DROP_AREA_SIZE
+expr_stmt|;
+block|}
+return|return
+name|drop_area_size
+return|;
 block|}
 end_function
 
@@ -1008,11 +1275,6 @@ name|dnd_window_h
 init|=
 literal|0
 decl_stmt|;
-name|GtkOrientation
-name|orientation
-init|=
-literal|0
-decl_stmt|;
 name|GtkAllocation
 name|allocation
 init|=
@@ -1020,10 +1282,39 @@ block|{
 literal|0
 block|, }
 decl_stmt|;
+name|GtkOrientation
+name|orientation
+init|=
+literal|0
+decl_stmt|;
 name|gboolean
 name|handle
 init|=
 name|FALSE
+decl_stmt|;
+name|gint
+name|drop_area_size
+init|=
+name|gimp_paned_box_get_drop_area_size
+argument_list|(
+name|paned_box
+argument_list|)
+decl_stmt|;
+name|gboolean
+name|no_widgets
+init|=
+operator|(
+name|g_list_length
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|widgets
+argument_list|)
+operator|==
+literal|0
+operator|)
 decl_stmt|;
 if|if
 condition|(
@@ -1064,7 +1355,23 @@ operator|&
 name|allocation
 argument_list|)
 expr_stmt|;
-comment|/* See if we're at the edge of the dock */
+comment|/* If there are no widgets, the drop area is as big as the paned    * box    */
+name|no_widgets
+operator|=
+operator|(
+name|g_list_length
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|widgets
+argument_list|)
+operator|==
+literal|0
+operator|)
+expr_stmt|;
+comment|/* See if we're at the edge of the dock If there are no dockables,    * the entire paned box is a drop area    */
 name|orientation
 operator|=
 name|gtk_orientable_get_orientation
@@ -1086,10 +1393,6 @@ name|dnd_window_y
 operator|=
 literal|0
 expr_stmt|;
-name|dnd_window_w
-operator|=
-name|DROP_AREA_SIZE
-expr_stmt|;
 name|dnd_window_h
 operator|=
 name|allocation
@@ -1098,9 +1401,24 @@ name|height
 expr_stmt|;
 if|if
 condition|(
+name|no_widgets
+condition|)
+name|dnd_window_w
+operator|=
+name|allocation
+operator|.
+name|width
+expr_stmt|;
+else|else
+name|dnd_window_w
+operator|=
+name|drop_area_size
+expr_stmt|;
+if|if
+condition|(
 name|x
 operator|<
-name|DROP_AREA_SIZE
+name|drop_area_size
 condition|)
 block|{
 name|insert_index
@@ -1120,7 +1438,7 @@ name|allocation
 operator|.
 name|width
 operator|-
-name|DROP_AREA_SIZE
+name|drop_area_size
 condition|)
 block|{
 name|insert_index
@@ -1134,7 +1452,7 @@ name|allocation
 operator|.
 name|width
 operator|-
-name|DROP_AREA_SIZE
+name|drop_area_size
 expr_stmt|;
 block|}
 block|}
@@ -1151,15 +1469,26 @@ name|allocation
 operator|.
 name|width
 expr_stmt|;
+if|if
+condition|(
+name|no_widgets
+condition|)
 name|dnd_window_h
 operator|=
-name|DROP_AREA_SIZE
+name|allocation
+operator|.
+name|height
+expr_stmt|;
+else|else
+name|dnd_window_h
+operator|=
+name|drop_area_size
 expr_stmt|;
 if|if
 condition|(
 name|y
 operator|<
-name|DROP_AREA_SIZE
+name|drop_area_size
 condition|)
 block|{
 name|insert_index
@@ -1179,7 +1508,7 @@ name|allocation
 operator|.
 name|height
 operator|-
-name|DROP_AREA_SIZE
+name|drop_area_size
 condition|)
 block|{
 name|insert_index
@@ -1193,7 +1522,7 @@ name|allocation
 operator|.
 name|height
 operator|-
-name|DROP_AREA_SIZE
+name|drop_area_size
 expr_stmt|;
 block|}
 block|}
@@ -1616,6 +1945,16 @@ operator|==
 literal|0
 condition|)
 block|{
+comment|/* A widget is added, hide the instructions */
+name|gtk_widget_hide
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|)
+expr_stmt|;
 name|gtk_box_pack_start
 argument_list|(
 name|GTK_BOX
@@ -2044,6 +2383,16 @@ argument_list|,
 name|widget
 argument_list|)
 expr_stmt|;
+comment|/* The last widget is removed, show the instructions */
+name|gtk_widget_show
+argument_list|(
+name|paned_box
+operator|->
+name|p
+operator|->
+name|instructions
+argument_list|)
+expr_stmt|;
 block|}
 else|else
 block|{
@@ -2244,6 +2593,11 @@ name|will_handle
 init|=
 name|FALSE
 decl_stmt|;
+name|gint
+name|drop_area_size
+init|=
+literal|0
+decl_stmt|;
 name|g_return_val_if_fail
 argument_list|(
 name|paned_box
@@ -2348,6 +2702,13 @@ name|paned_box
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|drop_area_size
+operator|=
+name|gimp_paned_box_get_drop_area_size
+argument_list|(
+name|paned_box
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|orientation
@@ -2360,7 +2721,7 @@ operator|=
 operator|(
 name|paned_box_x
 operator|<
-name|DROP_AREA_SIZE
+name|drop_area_size
 operator|||
 name|paned_box_x
 operator|>
@@ -2368,7 +2729,7 @@ name|allocation
 operator|.
 name|width
 operator|-
-name|DROP_AREA_SIZE
+name|drop_area_size
 operator|)
 expr_stmt|;
 block|}
@@ -2380,7 +2741,7 @@ operator|=
 operator|(
 name|paned_box_y
 operator|<
-name|DROP_AREA_SIZE
+name|drop_area_size
 operator|||
 name|paned_box_y
 operator|>
@@ -2388,7 +2749,7 @@ name|allocation
 operator|.
 name|height
 operator|-
-name|DROP_AREA_SIZE
+name|drop_area_size
 operator|)
 expr_stmt|;
 block|}
